--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "nuxt": "^3.1.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "jwt-decode": "^3.1.2"
   }
 }
