--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "jwt-decode": "^3.1.2"
+    "consola": "^3.1.0",
+    "jwt-decode": "^3.1.2",
+    "nuxt-proxy": "^0.4.1"
   }
 }
